--- a/my-app/src/Footer/footer.css
+++ b/my-app/src/Footer/footer.css
@@ -10,26 +10,28 @@ ul {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 50 px; 
 }
   
   .redes-container ul li {
     display: inline-block;
-    margin: 0 5px;
+    margin: 0 35px;
+    margin-top: 50px;
     height: 50px;
     width: 50px;
     text-align: center; 
+    
 }
   
   .redes-container ul li a {
     display: block;
-    padding: 0 10px;
+    padding: 0 8px;
     background-color: #333;
     color: white;
     line-height: 50px;
     font-size: 18px;
     box-shadow: 0 3px 5px 0px rgba(0, 0, 0, 0.2);
     transition: .2s; 
+    border-radius: 15%;
 }
   
   .redes-container ul:hover a {
@@ -47,7 +49,7 @@ ul {
 }
   
   .redes-container ul li .instagram:hover {
-    background-color: #2A5B83; 
+    background: linear-gradient(#405de6,#e1306c); 
 }
   
   .redes-container ul li .email:hover {
@@ -55,6 +57,6 @@ ul {
 }
   
   .redes-container ul li .whatapp:hover {
-    background-color: #128c7e; 
+    background-color: #25d366; 
 }
   
