--- a/my-app/src/ItemListContainer/styleCatalogo.css
+++ b/my-app/src/ItemListContainer/styleCatalogo.css
@@ -3,3 +3,19 @@
     justify-content: center;
     margin: 10px;
 }
+.buttoComprar {
+    padding: 20px;
+    margin: 20px;
+    background-color: #4CAF50;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 4px;
+    text-align: center;
+    
+}
