--- a/my-app/src/navBar/navBar.css
+++ b/my-app/src/navBar/navBar.css
@@ -1,7 +1,7 @@
-
-ul {
+ul{
     display: flex;
-    list-style: none;
     justify-content: space-between;
     align-items: center;
+    color: black;
+    padding: 5px;
 }
